# bashUtils

./: .gitmodules  Readme.md  config.sh  io.sh  loader.sh  network.sh  utils.sh
bCurses/: bCurses.sh  bcBase.sh  bcText.sh  bcWindow.sh  terminfo.sh
bindings/: BASHbinding.sh  compiling.sh  constructing.sh  generate.sh  io.sh  reading.sh  startstop.sh  type.sh
bindings/src/: .clang-format  CMakeLists.txt  FindLibTCC.cmake  binding.c  binding.h  tidVector.c  tidVector.h  utils.c  utils.h  vars.c
ooBASH/: classCreation.sh  objectHandling.sh
utilFunctions/: io.sh  threadSync.sh  utils.sh
